sources/backend/structbe.output
Grammaire

    0 $accept: program $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT

    3 postfix_expression: primary_expression
    4                   | postfix_expression '(' ')'
    5                   | postfix_expression '(' argument_expression_list ')'

    6 argument_expression_list: primary_expression
    7                         | argument_expression_list ',' primary_expression

    8 unary_expression: postfix_expression
    9                 | unary_operator primary_expression

   10 unary_operator: '&'
   11               | '*'
   12               | '-'

   13 multiplicative_expression: unary_expression
   14                          | primary_expression '*' primary_expression
   15                          | primary_expression '/' primary_expression

   16 additive_expression: multiplicative_expression
   17                    | primary_expression '+' primary_expression
   18                    | primary_expression '-' primary_expression

   19 relational_expression: additive_expression
   20                      | primary_expression '<' primary_expression
   21                      | primary_expression '>' primary_expression
   22                      | primary_expression LE_OP primary_expression
   23                      | primary_expression GE_OP primary_expression

   24 equality_expression: relational_expression
   25                    | primary_expression EQ_OP primary_expression
   26                    | primary_expression NE_OP primary_expression

   27 expression: equality_expression
   28           | unary_operator primary_expression '=' primary_expression
   29           | primary_expression '=' additive_expression

   30 declaration: declaration_specifiers declarator ';'

   31 declaration_specifiers: EXTERN type_specifier
   32                       | type_specifier

   33 type_specifier: VOID
   34               | INT

   35 declarator: '*' direct_declarator
   36           | direct_declarator

   37 direct_declarator: IDENTIFIER
   38                  | direct_declarator '(' parameter_list ')'
   39                  | direct_declarator '(' ')'

   40 parameter_list: parameter_declaration
   41               | parameter_list ',' parameter_declaration

   42 parameter_declaration: declaration_specifiers declarator

   43 statement: compound_statement
   44          | labeled_statement
   45          | expression_statement
   46          | selection_statement
   47          | jump_statement

   48 compound_statement: '{' '}'
   49                   | '{' statement_list '}'
   50                   | '{' declaration_list '}'
   51                   | '{' declaration_list statement_list '}'

   52 declaration_list: declaration
   53                 | declaration_list declaration

   54 statement_list: statement
   55               | statement_list statement

   56 labeled_statement: IDENTIFIER ':' statement

   57 expression_statement: ';'
   58                     | expression ';'

   59 selection_statement: IF '(' equality_expression ')' GOTO IDENTIFIER ';'

   60 jump_statement: RETURN ';'
   61               | RETURN expression ';'
   62               | GOTO IDENTIFIER ';'

   63 program: external_declaration
   64        | program external_declaration

   65 external_declaration: function_definition
   66                     | declaration

   67 function_definition: declaration_specifiers declarator compound_statement


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'&' (38) 10
'(' (40) 4 5 38 39 59
')' (41) 4 5 38 39 59
'*' (42) 11 14 35
'+' (43) 17
',' (44) 7 41
'-' (45) 12 18
'/' (47) 15
':' (58) 56
';' (59) 30 57 58 59 60 61 62
'<' (60) 20
'=' (61) 28 29
'>' (62) 21
'{' (123) 48 49 50 51
'}' (125) 48 49 50 51
error (256)
IDENTIFIER (258) 1 37 56 59 62
CONSTANT (259) 2
LE_OP (260) 22
GE_OP (261) 23
EQ_OP (262) 25
NE_OP (263) 26
EXTERN (264) 31
INT (265) 34
VOID (266) 33
IF (267) 59
RETURN (268) 60 61
GOTO (269) 59 62


Non-terminaux, suivis des règles où ils apparaissent

$accept (30)
    à gauche: 0
primary_expression (31)
    à gauche: 1 2, à droite: 3 6 7 9 14 15 17 18 20 21 22 23 25 26
    28 29
postfix_expression (32)
    à gauche: 3 4 5, à droite: 4 5 8
argument_expression_list (33)
    à gauche: 6 7, à droite: 5 7
unary_expression (34)
    à gauche: 8 9, à droite: 13
unary_operator (35)
    à gauche: 10 11 12, à droite: 9 28
multiplicative_expression (36)
    à gauche: 13 14 15, à droite: 16
additive_expression (37)
    à gauche: 16 17 18, à droite: 19 29
relational_expression (38)
    à gauche: 19 20 21 22 23, à droite: 24
equality_expression (39)
    à gauche: 24 25 26, à droite: 27 59
expression (40)
    à gauche: 27 28 29, à droite: 58 61
declaration (41)
    à gauche: 30, à droite: 52 53 66
declaration_specifiers (42)
    à gauche: 31 32, à droite: 30 42 67
type_specifier (43)
    à gauche: 33 34, à droite: 31 32
declarator (44)
    à gauche: 35 36, à droite: 30 42 67
direct_declarator (45)
    à gauche: 37 38 39, à droite: 35 36 38 39
parameter_list (46)
    à gauche: 40 41, à droite: 38 41
parameter_declaration (47)
    à gauche: 42, à droite: 40 41
statement (48)
    à gauche: 43 44 45 46 47, à droite: 54 55 56
compound_statement (49)
    à gauche: 48 49 50 51, à droite: 43 67
declaration_list (50)
    à gauche: 52 53, à droite: 50 51 53
statement_list (51)
    à gauche: 54 55, à droite: 49 51 55
labeled_statement (52)
    à gauche: 56, à droite: 44
expression_statement (53)
    à gauche: 57 58, à droite: 45
selection_statement (54)
    à gauche: 59, à droite: 46
jump_statement (55)
    à gauche: 60 61 62, à droite: 47
program (56)
    à gauche: 63 64, à droite: 0 64
external_declaration (57)
    à gauche: 65 66, à droite: 63 64
function_definition (58)
    à gauche: 67, à droite: 65


État 0

    0 $accept: . program $end

    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3

    declaration             aller à l'état 4
    declaration_specifiers  aller à l'état 5
    type_specifier          aller à l'état 6
    program                 aller à l'état 7
    external_declaration    aller à l'état 8
    function_definition     aller à l'état 9


État 1

   31 declaration_specifiers: EXTERN . type_specifier

    INT   décalage et aller à l'état 2
    VOID  décalage et aller à l'état 3

    type_specifier  aller à l'état 10


État 2

   34 type_specifier: INT .

    $défaut  réduction par utilisation de la règle 34 (type_specifier)


État 3

   33 type_specifier: VOID .

    $défaut  réduction par utilisation de la règle 33 (type_specifier)


État 4

   66 external_declaration: declaration .

    $défaut  réduction par utilisation de la règle 66 (external_declaration)


État 5

   30 declaration: declaration_specifiers . declarator ';'
   67 function_definition: declaration_specifiers . declarator compound_statement

    IDENTIFIER  décalage et aller à l'état 11
    '*'         décalage et aller à l'état 12

    declarator         aller à l'état 13
    direct_declarator  aller à l'état 14


État 6

   32 declaration_specifiers: type_specifier .

    $défaut  réduction par utilisation de la règle 32 (declaration_specifiers)


État 7

    0 $accept: program . $end
   64 program: program . external_declaration

    $end    décalage et aller à l'état 15
    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3

    declaration             aller à l'état 4
    declaration_specifiers  aller à l'état 5
    type_specifier          aller à l'état 6
    external_declaration    aller à l'état 16
    function_definition     aller à l'état 9


État 8

   63 program: external_declaration .

    $défaut  réduction par utilisation de la règle 63 (program)


État 9

   65 external_declaration: function_definition .

    $défaut  réduction par utilisation de la règle 65 (external_declaration)


État 10

   31 declaration_specifiers: EXTERN type_specifier .

    $défaut  réduction par utilisation de la règle 31 (declaration_specifiers)


État 11

   37 direct_declarator: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 37 (direct_declarator)


État 12

   35 declarator: '*' . direct_declarator

    IDENTIFIER  décalage et aller à l'état 11

    direct_declarator  aller à l'état 17


État 13

   30 declaration: declaration_specifiers declarator . ';'
   67 function_definition: declaration_specifiers declarator . compound_statement

    ';'  décalage et aller à l'état 18
    '{'  décalage et aller à l'état 19

    compound_statement  aller à l'état 20


État 14

   36 declarator: direct_declarator .
   38 direct_declarator: direct_declarator . '(' parameter_list ')'
   39                  | direct_declarator . '(' ')'

    '('  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 36 (declarator)


État 15

    0 $accept: program $end .

    $défaut  accepter


État 16

   64 program: program external_declaration .

    $défaut  réduction par utilisation de la règle 64 (program)


État 17

   35 declarator: '*' direct_declarator .
   38 direct_declarator: direct_declarator . '(' parameter_list ')'
   39                  | direct_declarator . '(' ')'

    '('  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 35 (declarator)


État 18

   30 declaration: declaration_specifiers declarator ';' .

    $défaut  réduction par utilisation de la règle 30 (declaration)


État 19

   48 compound_statement: '{' . '}'
   49                   | '{' . statement_list '}'
   50                   | '{' . declaration_list '}'
   51                   | '{' . declaration_list statement_list '}'

    IDENTIFIER  décalage et aller à l'état 22
    CONSTANT    décalage et aller à l'état 23
    EXTERN      décalage et aller à l'état 1
    INT         décalage et aller à l'état 2
    VOID        décalage et aller à l'état 3
    IF          décalage et aller à l'état 24
    RETURN      décalage et aller à l'état 25
    GOTO        décalage et aller à l'état 26
    '&'         décalage et aller à l'état 27
    '*'         décalage et aller à l'état 28
    '-'         décalage et aller à l'état 29
    ';'         décalage et aller à l'état 30
    '{'         décalage et aller à l'état 19
    '}'         décalage et aller à l'état 31

    primary_expression         aller à l'état 32
    postfix_expression         aller à l'état 33
    unary_expression           aller à l'état 34
    unary_operator             aller à l'état 35
    multiplicative_expression  aller à l'état 36
    additive_expression        aller à l'état 37
    relational_expression      aller à l'état 38
    equality_expression        aller à l'état 39
    expression                 aller à l'état 40
    declaration                aller à l'état 41
    declaration_specifiers     aller à l'état 42
    type_specifier             aller à l'état 6
    statement                  aller à l'état 43
    compound_statement         aller à l'état 44
    declaration_list           aller à l'état 45
    statement_list             aller à l'état 46
    labeled_statement          aller à l'état 47
    expression_statement       aller à l'état 48
    selection_statement        aller à l'état 49
    jump_statement             aller à l'état 50


État 20

   67 function_definition: declaration_specifiers declarator compound_statement .

    $défaut  réduction par utilisation de la règle 67 (function_definition)


État 21

   38 direct_declarator: direct_declarator '(' . parameter_list ')'
   39                  | direct_declarator '(' . ')'

    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    ')'     décalage et aller à l'état 51

    declaration_specifiers  aller à l'état 52
    type_specifier          aller à l'état 6
    parameter_list          aller à l'état 53
    parameter_declaration   aller à l'état 54


État 22

    1 primary_expression: IDENTIFIER .
   56 labeled_statement: IDENTIFIER . ':' statement

    ':'  décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 1 (primary_expression)


État 23

    2 primary_expression: CONSTANT .

    $défaut  réduction par utilisation de la règle 2 (primary_expression)


État 24

   59 selection_statement: IF . '(' equality_expression ')' GOTO IDENTIFIER ';'

    '('  décalage et aller à l'état 56


État 25

   60 jump_statement: RETURN . ';'
   61               | RETURN . expression ';'

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23
    '&'         décalage et aller à l'état 27
    '*'         décalage et aller à l'état 28
    '-'         décalage et aller à l'état 29
    ';'         décalage et aller à l'état 58

    primary_expression         aller à l'état 32
    postfix_expression         aller à l'état 33
    unary_expression           aller à l'état 34
    unary_operator             aller à l'état 35
    multiplicative_expression  aller à l'état 36
    additive_expression        aller à l'état 37
    relational_expression      aller à l'état 38
    equality_expression        aller à l'état 39
    expression                 aller à l'état 59


État 26

   62 jump_statement: GOTO . IDENTIFIER ';'

    IDENTIFIER  décalage et aller à l'état 60


État 27

   10 unary_operator: '&' .

    $défaut  réduction par utilisation de la règle 10 (unary_operator)


État 28

   11 unary_operator: '*' .

    $défaut  réduction par utilisation de la règle 11 (unary_operator)


État 29

   12 unary_operator: '-' .

    $défaut  réduction par utilisation de la règle 12 (unary_operator)


État 30

   57 expression_statement: ';' .

    $défaut  réduction par utilisation de la règle 57 (expression_statement)


État 31

   48 compound_statement: '{' '}' .

    $défaut  réduction par utilisation de la règle 48 (compound_statement)


État 32

    3 postfix_expression: primary_expression .
   14 multiplicative_expression: primary_expression . '*' primary_expression
   15                          | primary_expression . '/' primary_expression
   17 additive_expression: primary_expression . '+' primary_expression
   18                    | primary_expression . '-' primary_expression
   20 relational_expression: primary_expression . '<' primary_expression
   21                      | primary_expression . '>' primary_expression
   22                      | primary_expression . LE_OP primary_expression
   23                      | primary_expression . GE_OP primary_expression
   25 equality_expression: primary_expression . EQ_OP primary_expression
   26                    | primary_expression . NE_OP primary_expression
   29 expression: primary_expression . '=' additive_expression

    LE_OP  décalage et aller à l'état 61
    GE_OP  décalage et aller à l'état 62
    EQ_OP  décalage et aller à l'état 63
    NE_OP  décalage et aller à l'état 64
    '*'    décalage et aller à l'état 65
    '-'    décalage et aller à l'état 66
    '/'    décalage et aller à l'état 67
    '+'    décalage et aller à l'état 68
    '<'    décalage et aller à l'état 69
    '>'    décalage et aller à l'état 70
    '='    décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 3 (postfix_expression)


État 33

    4 postfix_expression: postfix_expression . '(' ')'
    5                   | postfix_expression . '(' argument_expression_list ')'
    8 unary_expression: postfix_expression .

    '('  décalage et aller à l'état 72

    $défaut  réduction par utilisation de la règle 8 (unary_expression)


État 34

   13 multiplicative_expression: unary_expression .

    $défaut  réduction par utilisation de la règle 13 (multiplicative_expression)


État 35

    9 unary_expression: unary_operator . primary_expression
   28 expression: unary_operator . primary_expression '=' primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 73


État 36

   16 additive_expression: multiplicative_expression .

    $défaut  réduction par utilisation de la règle 16 (additive_expression)


État 37

   19 relational_expression: additive_expression .

    $défaut  réduction par utilisation de la règle 19 (relational_expression)


État 38

   24 equality_expression: relational_expression .

    $défaut  réduction par utilisation de la règle 24 (equality_expression)


État 39

   27 expression: equality_expression .

    $défaut  réduction par utilisation de la règle 27 (expression)


État 40

   58 expression_statement: expression . ';'

    ';'  décalage et aller à l'état 74


État 41

   52 declaration_list: declaration .

    $défaut  réduction par utilisation de la règle 52 (declaration_list)


État 42

   30 declaration: declaration_specifiers . declarator ';'

    IDENTIFIER  décalage et aller à l'état 11
    '*'         décalage et aller à l'état 12

    declarator         aller à l'état 75
    direct_declarator  aller à l'état 14


État 43

   54 statement_list: statement .

    $défaut  réduction par utilisation de la règle 54 (statement_list)


État 44

   43 statement: compound_statement .

    $défaut  réduction par utilisation de la règle 43 (statement)


État 45

   50 compound_statement: '{' declaration_list . '}'
   51                   | '{' declaration_list . statement_list '}'
   53 declaration_list: declaration_list . declaration

    IDENTIFIER  décalage et aller à l'état 22
    CONSTANT    décalage et aller à l'état 23
    EXTERN      décalage et aller à l'état 1
    INT         décalage et aller à l'état 2
    VOID        décalage et aller à l'état 3
    IF          décalage et aller à l'état 24
    RETURN      décalage et aller à l'état 25
    GOTO        décalage et aller à l'état 26
    '&'         décalage et aller à l'état 27
    '*'         décalage et aller à l'état 28
    '-'         décalage et aller à l'état 29
    ';'         décalage et aller à l'état 30
    '{'         décalage et aller à l'état 19
    '}'         décalage et aller à l'état 76

    primary_expression         aller à l'état 32
    postfix_expression         aller à l'état 33
    unary_expression           aller à l'état 34
    unary_operator             aller à l'état 35
    multiplicative_expression  aller à l'état 36
    additive_expression        aller à l'état 37
    relational_expression      aller à l'état 38
    equality_expression        aller à l'état 39
    expression                 aller à l'état 40
    declaration                aller à l'état 77
    declaration_specifiers     aller à l'état 42
    type_specifier             aller à l'état 6
    statement                  aller à l'état 43
    compound_statement         aller à l'état 44
    statement_list             aller à l'état 78
    labeled_statement          aller à l'état 47
    expression_statement       aller à l'état 48
    selection_statement        aller à l'état 49
    jump_statement             aller à l'état 50


État 46

   49 compound_statement: '{' statement_list . '}'
   55 statement_list: statement_list . statement

    IDENTIFIER  décalage et aller à l'état 22
    CONSTANT    décalage et aller à l'état 23
    IF          décalage et aller à l'état 24
    RETURN      décalage et aller à l'état 25
    GOTO        décalage et aller à l'état 26
    '&'         décalage et aller à l'état 27
    '*'         décalage et aller à l'état 28
    '-'         décalage et aller à l'état 29
    ';'         décalage et aller à l'état 30
    '{'         décalage et aller à l'état 19
    '}'         décalage et aller à l'état 79

    primary_expression         aller à l'état 32
    postfix_expression         aller à l'état 33
    unary_expression           aller à l'état 34
    unary_operator             aller à l'état 35
    multiplicative_expression  aller à l'état 36
    additive_expression        aller à l'état 37
    relational_expression      aller à l'état 38
    equality_expression        aller à l'état 39
    expression                 aller à l'état 40
    statement                  aller à l'état 80
    compound_statement         aller à l'état 44
    labeled_statement          aller à l'état 47
    expression_statement       aller à l'état 48
    selection_statement        aller à l'état 49
    jump_statement             aller à l'état 50


État 47

   44 statement: labeled_statement .

    $défaut  réduction par utilisation de la règle 44 (statement)


État 48

   45 statement: expression_statement .

    $défaut  réduction par utilisation de la règle 45 (statement)


État 49

   46 statement: selection_statement .

    $défaut  réduction par utilisation de la règle 46 (statement)


État 50

   47 statement: jump_statement .

    $défaut  réduction par utilisation de la règle 47 (statement)


État 51

   39 direct_declarator: direct_declarator '(' ')' .

    $défaut  réduction par utilisation de la règle 39 (direct_declarator)


État 52

   42 parameter_declaration: declaration_specifiers . declarator

    IDENTIFIER  décalage et aller à l'état 11
    '*'         décalage et aller à l'état 12

    declarator         aller à l'état 81
    direct_declarator  aller à l'état 14


État 53

   38 direct_declarator: direct_declarator '(' parameter_list . ')'
   41 parameter_list: parameter_list . ',' parameter_declaration

    ')'  décalage et aller à l'état 82
    ','  décalage et aller à l'état 83


État 54

   40 parameter_list: parameter_declaration .

    $défaut  réduction par utilisation de la règle 40 (parameter_list)


État 55

   56 labeled_statement: IDENTIFIER ':' . statement

    IDENTIFIER  décalage et aller à l'état 22
    CONSTANT    décalage et aller à l'état 23
    IF          décalage et aller à l'état 24
    RETURN      décalage et aller à l'état 25
    GOTO        décalage et aller à l'état 26
    '&'         décalage et aller à l'état 27
    '*'         décalage et aller à l'état 28
    '-'         décalage et aller à l'état 29
    ';'         décalage et aller à l'état 30
    '{'         décalage et aller à l'état 19

    primary_expression         aller à l'état 32
    postfix_expression         aller à l'état 33
    unary_expression           aller à l'état 34
    unary_operator             aller à l'état 35
    multiplicative_expression  aller à l'état 36
    additive_expression        aller à l'état 37
    relational_expression      aller à l'état 38
    equality_expression        aller à l'état 39
    expression                 aller à l'état 40
    statement                  aller à l'état 84
    compound_statement         aller à l'état 44
    labeled_statement          aller à l'état 47
    expression_statement       aller à l'état 48
    selection_statement        aller à l'état 49
    jump_statement             aller à l'état 50


État 56

   59 selection_statement: IF '(' . equality_expression ')' GOTO IDENTIFIER ';'

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23
    '&'         décalage et aller à l'état 27
    '*'         décalage et aller à l'état 28
    '-'         décalage et aller à l'état 29

    primary_expression         aller à l'état 85
    postfix_expression         aller à l'état 33
    unary_expression           aller à l'état 34
    unary_operator             aller à l'état 86
    multiplicative_expression  aller à l'état 36
    additive_expression        aller à l'état 37
    relational_expression      aller à l'état 38
    equality_expression        aller à l'état 87


État 57

    1 primary_expression: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 1 (primary_expression)


État 58

   60 jump_statement: RETURN ';' .

    $défaut  réduction par utilisation de la règle 60 (jump_statement)


État 59

   61 jump_statement: RETURN expression . ';'

    ';'  décalage et aller à l'état 88


État 60

   62 jump_statement: GOTO IDENTIFIER . ';'

    ';'  décalage et aller à l'état 89


État 61

   22 relational_expression: primary_expression LE_OP . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 90


État 62

   23 relational_expression: primary_expression GE_OP . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 91


État 63

   25 equality_expression: primary_expression EQ_OP . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 92


État 64

   26 equality_expression: primary_expression NE_OP . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 93


État 65

   14 multiplicative_expression: primary_expression '*' . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 94


État 66

   18 additive_expression: primary_expression '-' . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 95


État 67

   15 multiplicative_expression: primary_expression '/' . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 96


État 68

   17 additive_expression: primary_expression '+' . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 97


État 69

   20 relational_expression: primary_expression '<' . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 98


État 70

   21 relational_expression: primary_expression '>' . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 99


État 71

   29 expression: primary_expression '=' . additive_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23
    '&'         décalage et aller à l'état 27
    '*'         décalage et aller à l'état 28
    '-'         décalage et aller à l'état 29

    primary_expression         aller à l'état 100
    postfix_expression         aller à l'état 33
    unary_expression           aller à l'état 34
    unary_operator             aller à l'état 86
    multiplicative_expression  aller à l'état 36
    additive_expression        aller à l'état 101


État 72

    4 postfix_expression: postfix_expression '(' . ')'
    5                   | postfix_expression '(' . argument_expression_list ')'

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23
    ')'         décalage et aller à l'état 102

    primary_expression        aller à l'état 103
    argument_expression_list  aller à l'état 104


État 73

    9 unary_expression: unary_operator primary_expression .
   28 expression: unary_operator primary_expression . '=' primary_expression

    '='  décalage et aller à l'état 105

    $défaut  réduction par utilisation de la règle 9 (unary_expression)


État 74

   58 expression_statement: expression ';' .

    $défaut  réduction par utilisation de la règle 58 (expression_statement)


État 75

   30 declaration: declaration_specifiers declarator . ';'

    ';'  décalage et aller à l'état 18


État 76

   50 compound_statement: '{' declaration_list '}' .

    $défaut  réduction par utilisation de la règle 50 (compound_statement)


État 77

   53 declaration_list: declaration_list declaration .

    $défaut  réduction par utilisation de la règle 53 (declaration_list)


État 78

   51 compound_statement: '{' declaration_list statement_list . '}'
   55 statement_list: statement_list . statement

    IDENTIFIER  décalage et aller à l'état 22
    CONSTANT    décalage et aller à l'état 23
    IF          décalage et aller à l'état 24
    RETURN      décalage et aller à l'état 25
    GOTO        décalage et aller à l'état 26
    '&'         décalage et aller à l'état 27
    '*'         décalage et aller à l'état 28
    '-'         décalage et aller à l'état 29
    ';'         décalage et aller à l'état 30
    '{'         décalage et aller à l'état 19
    '}'         décalage et aller à l'état 106

    primary_expression         aller à l'état 32
    postfix_expression         aller à l'état 33
    unary_expression           aller à l'état 34
    unary_operator             aller à l'état 35
    multiplicative_expression  aller à l'état 36
    additive_expression        aller à l'état 37
    relational_expression      aller à l'état 38
    equality_expression        aller à l'état 39
    expression                 aller à l'état 40
    statement                  aller à l'état 80
    compound_statement         aller à l'état 44
    labeled_statement          aller à l'état 47
    expression_statement       aller à l'état 48
    selection_statement        aller à l'état 49
    jump_statement             aller à l'état 50


État 79

   49 compound_statement: '{' statement_list '}' .

    $défaut  réduction par utilisation de la règle 49 (compound_statement)


État 80

   55 statement_list: statement_list statement .

    $défaut  réduction par utilisation de la règle 55 (statement_list)


État 81

   42 parameter_declaration: declaration_specifiers declarator .

    $défaut  réduction par utilisation de la règle 42 (parameter_declaration)


État 82

   38 direct_declarator: direct_declarator '(' parameter_list ')' .

    $défaut  réduction par utilisation de la règle 38 (direct_declarator)


État 83

   41 parameter_list: parameter_list ',' . parameter_declaration

    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3

    declaration_specifiers  aller à l'état 52
    type_specifier          aller à l'état 6
    parameter_declaration   aller à l'état 107


État 84

   56 labeled_statement: IDENTIFIER ':' statement .

    $défaut  réduction par utilisation de la règle 56 (labeled_statement)


État 85

    3 postfix_expression: primary_expression .
   14 multiplicative_expression: primary_expression . '*' primary_expression
   15                          | primary_expression . '/' primary_expression
   17 additive_expression: primary_expression . '+' primary_expression
   18                    | primary_expression . '-' primary_expression
   20 relational_expression: primary_expression . '<' primary_expression
   21                      | primary_expression . '>' primary_expression
   22                      | primary_expression . LE_OP primary_expression
   23                      | primary_expression . GE_OP primary_expression
   25 equality_expression: primary_expression . EQ_OP primary_expression
   26                    | primary_expression . NE_OP primary_expression

    LE_OP  décalage et aller à l'état 61
    GE_OP  décalage et aller à l'état 62
    EQ_OP  décalage et aller à l'état 63
    NE_OP  décalage et aller à l'état 64
    '*'    décalage et aller à l'état 65
    '-'    décalage et aller à l'état 66
    '/'    décalage et aller à l'état 67
    '+'    décalage et aller à l'état 68
    '<'    décalage et aller à l'état 69
    '>'    décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 3 (postfix_expression)


État 86

    9 unary_expression: unary_operator . primary_expression

    IDENTIFIER  décalage et aller à l'état 57
    CONSTANT    décalage et aller à l'état 23

    primary_expression  aller à l'état 108


État 87

   59 selection_statement: IF '(' equality_expression . ')' GOTO IDENTIFIER ';'

    ')'  décalage et aller à l'état 109


État 88

   61 jump_statement: RETURN expression ';' .

    $défaut  réduction par utilisation de la règle 61 (jump_statement)


État 89

   62 jump_statement: GOTO IDENTIFIER ';' .

    $défaut  réduction par utilisation de la règle 62 (jump_statement)


État 90

   22 relational_expression: primary_expression LE_OP primary_expression .

    $défaut  réduction par utilisation de la règle 22 (relational_expression)


État 91

   23 relational_expression: primary_expression GE_OP primary_expression .

    $défaut  réduction par utilisation de la règle 23 (relational_expression)


État 92

   25 equality_expression: primary_expression EQ_OP primary_expression .

    $défaut  réduction par utilisation de la règle 25 (equality_expression)


État 93

   26 equality_expression: primary_expression NE_OP primary_expression .

    $défaut  réduction par utilisation de la règle 26 (equality_expression)


État 94

   14 multiplicative_expression: primary_expression '*' primary_expression .

    $défaut  réduction par utilisation de la règle 14 (multiplicative_expression)


État 95

   18 additive_expression: primary_expression '-' primary_expression .

    $défaut  réduction par utilisation de la règle 18 (additive_expression)


État 96

   15 multiplicative_expression: primary_expression '/' primary_expression .

    $défaut  réduction par utilisation de la règle 15 (multiplicative_expression)


État 97

   17 additive_expression: primary_expression '+' primary_expression .

    $défaut  réduction par utilisation de la règle 17 (additive_expression)


État 98

   20 relational_expression: primary_expression '<' primary_expression .

    $défaut  réduction par utilisation de la règle 20 (relational_expression)


État 99

   21 relational_expression: primary_expression '>' primary_expression .

    $défaut  réduction par utilisation de la règle 21 (relational_expression)


État 100

    3 postfix_expression: primary_expression .
   14 multiplicative_expression: primary_expression . '*' primary_expression
   15                          | primary_expression . '/' primary_expression
   17 additive_expression: primary_expression . '+' primary_expression
   18                    | primary_expression . '-' primary_expression

    '*'  décalage et aller à l'état 65
    '-'  décalage et aller à l'état 66
    '/'  décalage et aller à l'état 67
    '+'  décalage et aller à l'état 68
